[package]
authors = ['Kylin <https://github.com/kylin-network>']
edition = '2018'
homepage = 'https://kylin.network'
license = 'Apache 2.0'
name = 'kylin-runtime'
repository = 'https://github.com/kylin-network/kylin-collator/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
hex-literal = { version = '0.3.4', optional = true }

log = { version = "0.4.16", default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

## Substrate FRAME Dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.27" }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.27" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-pallet-dmp-queue  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" , default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.27" }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.27" }


# Polkadot Dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.27" }

# Local orml
orml-xcm = { path = "../../pallets/orml/xcm", default-features = false }
orml-traits = { path = "../../pallets/orml/traits", default-features = false }
orml-tokens = { path = "../../pallets/orml/tokens", default-features = false }
orml-xtokens = { path = "../../pallets/orml/xtokens", default-features = false }
orml-currencies = { path = "../../pallets/orml/currencies", default-features = false }
orml-xcm-support = { path = "../../pallets/orml/xcm-support", default-features = false }
orml-unknown-tokens = { path = "../../pallets/orml/unknown-tokens", default-features = false }

# Local Dependencies
kylin-reporter = { package = 'kylin-reporter', path = '../../pallets/kylin-reporter', default-features = false }
runtime-common = { path = "../common", default-features = false }

kylin-democracy = { package = 'kylin-democracy', path = '../../pallets/kylin-democracy', default-features = false }
kylin-feed = { version = "4.0.0-dev", default-features = false, path = "../../pallets/kylin-feed" }
kylin-market = { version = "4.0.0-dev", default-features = false, path = "../../pallets/kylin-market" }
pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

[dev-dependencies]
hex-literal = "0.3.4"
hex = "0.4.3"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-membership/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-xcm/runtime-benchmarks',
	'kylin-reporter/runtime-benchmarks',
	'xcm-builder/runtime-benchmarks',
	'xcm/runtime-benchmarks',
]
std = [
	'codec/std',
	'scale-info/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-core/std',
	'sp-consensus-aura/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',

	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',

	'pallet-assets/std',
	'pallet-aura/std',
	'pallet-collective/std',
	'pallet-membership/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-scheduler/std',
	'pallet-sudo/std',
	'pallet-utility/std',
	'pallet-vesting/std',
	'pallet-transaction-payment/std',
	'pallet-xcm/std',
	'parachain-info/std',
	'parachains-common/std',
	'kylin-democracy/std',
	'pallet-treasury/std',

	'pallet-authorship/std',
	'pallet-collator-selection/std',
	'pallet-session/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-uniques/std',
	'polkadot-parachain/std',
	'polkadot-runtime-common/std',

	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-dmp-queue/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-primitives-core/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-utility/std',
	'cumulus-primitives-timestamp/std',

	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',

	'orml-xcm/std',
	'orml-tokens/std',
	'orml-xtokens/std',
	'orml-currencies/std',
	'orml-xcm-support/std',
	'orml-unknown-tokens/std',

	'kylin-reporter/std',
	'kylin-feed/std',
	'kylin-market/std',
]

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	'sp-api/disable-logging',
]
